vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - vault.local
      secretName: vault-tls

  rules:
    - host: vault.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: security-vault
                port:
                  number: 8200
